--- a/pages/potvrzeni_platby.html
+++ b/pages/potvrzeni_platby.html
@@ -81,7 +81,7 @@
     <!-- PRODUCT SECTION -->
     <section>
       <div class="container-fluid text-center wrapper">
-        <form action="uspesna_platba.html" method="post" class="main-form">
+        <form action="uspesna_platba.html" method="get" class="main-form">
           <div class="method-wrapper">
             <p>Zvolte způsob platby</p>
             <ul class="list-group">
@@ -156,7 +156,7 @@
               <h2>Cena vč. DPH:</h2>
               <h2><span class="finalPrice">0</span> CZK</h2>
             </div>
-            <button class="btn btn-outline-primary" type="button">Zpět</button>
+            <a href="kosik.html" class="btn btn-outline-primary" type="button">Zpět</a>
             <input class="btn btn-primary" type="submit" value="Pokračovat">
           </div>
         </form>
