--- a/pages/kosik.html
+++ b/pages/kosik.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/c83f76cb7b.js" crossorigin="anonymous"></script>
     <style>
       section.background {
-        background-image: url("../../assets/imgs/bg/10.png");
+        background-image: url("../assets/imgs/bg/10.png");
         background-position: center;
       }
     </style>
