added required to coupon input

--- a/pages/kosik.html
+++ b/pages/kosik.html
@@ -209,7 +209,7 @@
                 <div class="card-body">
                   <div class="input-group">
                     <span class="input-group-text" id="addon"><i class="fa-solid fa-pen-nib"></i></span>
-                    <input type="text" id="coupon" class="form-control" placeholder="Zadat kupón.." aria-label="Coupon" aria-describedby="addon">
+                    <input type="text" id="coupon" class="form-control" placeholder="Zadat kupón.." aria-label="Coupon" aria-describedby="addon" required>
                   </div>
                   <button class="btn btn-outline-primary">Načíst</button>
                 </div>
