--- a/pages/kosik.html
+++ b/pages/kosik.html
@@ -209,9 +209,9 @@
                 <div class="card-body">
                   <div class="input-group">
                     <span class="input-group-text" id="addon"><i class="fa-solid fa-pen-nib"></i></span>
-                    <input type="text" id="coupon" class="form-control" placeholder="Zadat kupón.." aria-label="Coupon" aria-describedby="addon" required>
+                    <input type="text" id="coupon" class="form-control" placeholder="Zadat kupón.." aria-label="Coupon" aria-describedby="addon">
                   </div>
-                  <button class="btn btn-outline-primary">Načíst</button>
+                  <button class="btn btn-outline-primary" id="couponLoad">Načíst</button>
                 </div>
               </div>
             </div>
