added (hopefully) the coupon either added or not

--- a/pages/potvrzeni_platby.html
+++ b/pages/potvrzeni_platby.html
@@ -152,6 +152,10 @@
               <!-- RECAP -->
               <ul class="list-group lg"></ul>
             </div>
+            <div class="coupon-wrapper">
+              <!-- COUPON -->
+              <ul class="list-group lg"></ul>
+            </div>
             <div class="final-price-wrapper">
               <h2>Cena vč. DPH:</h2>
               <h2><span class="finalPrice">0</span> CZK</h2>
