--- a/pages/kosik.html
+++ b/pages/kosik.html
@@ -215,6 +215,7 @@
                 </div>
               </div>
             </div>
+            <div id="notification-container"></div>
             <!-- PLAYER NAME -->
             <div class="input-group mb-3">
               <span class="input-group-text" id="addon"><i class="fa-solid fa-pen-nib"></i></span>
