added the can't pay 0 CZK, so dont proceed.

--- a/pages/kosik.html
+++ b/pages/kosik.html
@@ -198,7 +198,7 @@
             <div class="price">
               <h3>Cena: <span class="finalPrice">0</span> CZK</h3>
               <!-- PAY BUTTON-->
-              <input type="submit" class="btn btn-primary btn-lg" value="Zaplatit">
+              <input type="submit" id="paymentButton" class="btn btn-primary btn-lg" value="Zaplatit">
             </div>
             <!-- COUPON -->
             <div class="coupon">
