tweaked an applycoupon func

--- a/pages/odmeny/odmeny.html
+++ b/pages/odmeny/odmeny.html
@@ -94,7 +94,7 @@
             <img src="../../assets/imgs/odmeny/mesicni_vyplata.png" class="card-img-top product-image" alt="...">
           </div>
           <div class="card-body">
-              <h4 class="product-name">Měsíční oděma</h4>
+              <h4 class="product-name">Měsíční odměna</h4>
               <p><span class="product-price">Zdarma</span></p>
               <button class="btn btn-primary addToCart">Vložit do Košíku</button>
               <a href="#" class="btn btn-outline-primary" data-bs-target="#modalOpen" onclick="modalOpen(event)" data-product-id="12"><i class="fa-solid fa-circle-info"></i></a>
