--- a/pages/potvrzeni_platby.html
+++ b/pages/potvrzeni_platby.html
@@ -150,11 +150,11 @@
             </div>
             <div class="recap-wrapper">
               <!-- RECAP -->
-              <ul class="list-group lg"></ul>
+              <ul class="list-group lg products-cart"></ul>
             </div>
             <div class="coupon-wrapper">
               <!-- COUPON -->
-              <ul class="list-group lg"></ul>
+              <ul class="list-group lg coupon-cart"></ul>
             </div>
             <div class="final-price-wrapper">
               <h2>Cena vč. DPH:</h2>
