--- a/pages/potvrzeni_platby.html
+++ b/pages/potvrzeni_platby.html
@@ -147,6 +147,8 @@
             <h3>Shrnutí</h3>
             <div class="payment-type-wrapper">
               <p>Platba: <span id="payment-type"><!-- TYPE --></span></p>
+              <p>Přezdívka: <span id="username"><!-- TYPE --></span></p>
+              <p>E-mail: <span id="email"><!-- TYPE --></span></p>
             </div>
             <div class="recap-wrapper">
               <!-- RECAP -->
