--- a/pages/potvrzeni_platby.html
+++ b/pages/potvrzeni_platby.html
@@ -146,9 +146,9 @@
           <div class="recapitulation-wrapper">
             <h3>Shrnutí</h3>
             <div class="payment-type-wrapper">
-              <p>Platba: <span id="payment-type"><!-- TYPE --></span></p>
-              <p>Přezdívka: <span id="username"><!-- TYPE --></span></p>
-              <p>E-mail: <span id="email"><!-- TYPE --></span></p>
+              <p><b>Platba:</b> <span id="payment-type"><!-- TYPE --></span></p>
+              <p><b>Přezdívka:</b> <span id="username"><!-- TYPE --></span></p>
+              <p><b>E-mail:</b> <span id="email"><!-- TYPE --></span></p>
             </div>
             <div class="recap-wrapper">
               <!-- RECAP -->
