--- a/pages/kosik.html
+++ b/pages/kosik.html
@@ -194,7 +194,7 @@
             -->
             </div>
           </div>
-          <form action="potvrzeni_platby.html" method="get">
+          <form id="formular" action="potvrzeni_platby.html" method="get">
             <div class="price">
               <h3>Cena: <span class="finalPrice">0</span> CZK</h3>
               <!-- PAY BUTTON-->
