--- a/pages/potvrzeni_platby.html
+++ b/pages/potvrzeni_platby.html
@@ -12,6 +12,11 @@
     <link rel="shortcut icon" href="../assets/imgs/miwose-logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/c83f76cb7b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../assets/css/platba.css">
+    <style>
+      section p:nth-child(4) {
+        padding-top: 0;
+      }
+    </style>
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
