--- a/pages/potvrzeni_platby.html
+++ b/pages/potvrzeni_platby.html
@@ -152,9 +152,9 @@
             <h3>Shrnutí</h3>
             <div class="payment-type-wrapper">
               <p><b>Platba:</b> <span id="payment-type"><!-- TYPE --></span></p>
-              <p><b>Přezdívka:</b> <span id="username"><!-- TYPE --></span></p>
-              <p><b>Přezdívka přítele:</b> <span id="usernameGifted"><!-- TYPE --></span></p>
-              <p><b>E-mail:</b> <span id="email"><!-- TYPE --></span></p>
+              <p id="usernameWrapper"><b>Přezdívka:</b> <span id="username"><!-- TYPE --></span></p>
+              <p id="giftedUsernameWrapper"><b>Přezdívka přítele:</b> <span id="usernameGifted"><!-- TYPE --></span></p>
+              <p id="emailWrapper"><b>E-mail:</b> <span id="email"><!-- TYPE --></span></p>
             </div>
             <div class="recap-wrapper">
               <!-- RECAP -->
