--- a/pages/potvrzeni_platby.html
+++ b/pages/potvrzeni_platby.html
@@ -170,7 +170,8 @@
               <h2><span class="finalPrice">0</span> CZK</h2>
             </div>
             <a href="kosik.html" class="btn btn-outline-primary" type="button">Zpět</a>
-            <input id="pay" class="btn btn-primary" type="submit" value="Pokračovat">
+            <!-- <input id="pay" class="btn btn-primary" type="submit" value="Pokračovat"> -->
+            <button id="pay" class="btn btn-primary">Pokračovat</button>
           </div>
         </form>
       </div>
