--- a/pages/uspesna_platba.html
+++ b/pages/uspesna_platba.html
@@ -115,5 +115,6 @@
         <div class="footer-delitko"></div>
         <p id="copy">&copy; - Minecraft Work Server 2024 | Web vytvořil <a href="https://biggerpipicek.github.io/strycekpipicek/">Pip</a> & <a href="https://zettovec.github.io/about">Nikd0</a></p>
       </footer>
+      <script src="../assets/js/deleteStorage.js"></script>
 </body>
 </html>
